# SFML-Flappy-Bird

./: CMakeLists.txt
dependencies/: CMakeLists.txt
src/: main.cpp
src/utils/: ISConvert.hpp
